Fix some timeline vertical spacing
I think this probably got messed up with the mass gem update

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -233,6 +233,7 @@ a
 
 .timeline
   @extend .pure-g
+  margin-bottom: .5em
   width: 100%
 
 .split, .inspect
